--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 		 version="3.1">
 
 	<servlet>
+
 		<servlet-name>springmvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 
@@ -14,11 +15,18 @@
 		</init-param>
 
 		<load-on-startup>1</load-on-startup>
+
+		<multipart-config>
+			<location>/tmp</location>
+		</multipart-config>
+
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+
 	<!-- needed for ContextLoaderListener -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
