SOLUCIONADO: agrega pelicula nueva y detalle

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 		<load-on-startup>1</load-on-startup>
 			
 		<multipart-config>
-			<location>c:\tmp</location>
+			<location>/tmp</location>
 		</multipart-config>
 				
 	</servlet>
